--- a/flappy-bird/index.html
+++ b/flappy-bird/index.html
@@ -3,30 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FAF Games | Flappy Bird Unblocked</title>
+    <title>Flappy Bird Unblocked</title>
     <meta name="description" content="Flappy Bird Unblocked is the famously difficult one-button arcade game. Tap to flap your bird's wings and navigate through a series of green pipes. Do not crash!">
     <meta name="keywords" content="flappy bird, flappy bird unblocked, skill game, hard game, one-button game, pixel game, classic game">
-    <link rel="canonical" href="https://fafgamess.github.io/flappy-bird" />
+    <link rel="canonical" href="https://onlyszgames.github.io/flappy-bird" />
     <meta name="robots" content="index, follow">
-    <meta name="author" content="FAF Games">
+    <meta name="author" content="Only Sz Games">
     <meta property="og:title" content="Flappy Bird Unblocked ~» The Infamous Flap-Fest" />
     <meta property="og:description" content="Flappy Bird Unblocked is the famously difficult one-button arcade game. Tap to flap your bird's wings and navigate through a series of green pipes. Do not crash!" />
-    <meta property="og:url" content="https://fafgamess.github.io/flappy-bird" />
-    <meta property="og:image" content="https://fafgamess.github.io/img/flappy-bird.png" />
+    <meta property="og:url" content="https://onlyszgames.github.io/flappy-bird" />
+    <meta property="og:image" content="https://onlyszgames.github.io/img/flappy-bird.png" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="FAF Games" />
+    <meta property="og:site_name" content="Only Sz Games" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@SZGames">
     <meta name="twitter:title" content="Flappy Bird Unblocked ~» The Infamous Flap-Fest">
     <meta name="twitter:description" content="Flappy Bird Unblocked is the famously difficult one-button arcade game. Tap to flap your bird's wings and navigate through a series of green pipes. Do not crash!">
-    <meta name="twitter:image" content="https://fafgamess.github.io/img/flappy-bird.png">
+    <meta name="twitter:image" content="https://onlyszgames.github.io/img/flappy-bird.png">
     <link rel="icon" type="image/png" href="favicon.png">
     <script type="application/ld+json">
   {
         "@context": "https://schema.org",
         "@type": "Game",
         "name": "Flappy Bird",
-        "url": "https://fafgamess.github.io/flappy-bird",
+        "url": "https://onlyszgames.github.io/flappy-bird",
         "description": "Flappy Bird Unblocked is the famously difficult one-button arcade game. Tap to flap your bird's wings and navigate through a series of green pipes. Do not crash!",
         "genre": "Skill",
         "applicationCategory": "Game",
@@ -43,7 +43,7 @@
             "bestRating": "5",
             "worstRating": "1"
         },
-        "image": "https://fafgamess.github.io/img/flappy-bird.png"
+        "image": "https://onlyszgames.github.io/img/flappy-bird.png"
    }
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans&display=swap" rel="stylesheet">
@@ -393,7 +393,7 @@ justify-content: center;}
     <header>
        <div class="container header-content">
             <a href="/" class="logo">
-                FAF Games
+                Only Sz Games
             </a>
             <nav class="main-nav">
                 <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
@@ -434,8 +434,8 @@ justify-content: center;}
     <div class="container">
 
         <div class="game-header" style="background-color: #C0CA33;">
-            <h1>Flappy Bird Unblocked The Classic Tap-to-Fly Challenge on GitHub.io</h1>
-            <p>The legend returns! 🐦 Flappy Bird Unblocked is the ultimate one-button arcade game that took the world by storm. Simply tap to make your bird flap its wings and navigate through the narrow gaps between green pipes. It’s simple, frustratingly difficult, and completely addictive a perfect mix that keeps players coming back for “just one more try.” Whether you're at school, work, or home, you can now enjoy Flappy Bird Unblocked directly in your browser no downloads, no lag, just pure skill-based fun.</p>
+            <h1>Flappy Bird</h1>
+            <p>The legend is back! Flappy Bird Unblocked is the simple, one-button game that took the world by storm. Tap to make your bird flap. Your goal is to guide it through the gaps in the green pipes. It is simple, it is difficult, and it is addictive.</p>
         </div>
 
         <div class="star-rating-container" data-game-id="flappy-bird">
@@ -452,7 +452,7 @@ justify-content: center;}
 
         <div class="game-container">
             <div class="game-frame-container" id="gameFrameContainer">
-                <div class="game-image-bg" id="gameImageBg" style="background-image: url('https://fafgamess.github.io/img/flappy-bird.png');"></div>
+                <div class="game-image-bg" id="gameImageBg" style="background-image: url('https://onlyszgames.github.io/img/flappy-bird.png');"></div>
                 <div class="game-overlay" id="gameOverlay">
                   <button class="play-button" id="playButton">▶</button>
                     <div class="play-text">Play Flappy Bird</div>
@@ -463,6 +463,7 @@ justify-content: center;}
                 </button>
             </div>
         </div>
+
 
         <div class="game-description">
             <img src="https://fafgamess.github.io/img/flappy-bird.png" alt="Flappy Bird
