--- a/flappy-bird/index.html
+++ b/flappy-bird/index.html
@@ -3,30 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flappy Bird Unblocked</title>
+    <title>FAF Games | Flappy Bird Unblocked</title>
     <meta name="description" content="Flappy Bird Unblocked is the famously difficult one-button arcade game. Tap to flap your bird's wings and navigate through a series of green pipes. Do not crash!">
     <meta name="keywords" content="flappy bird, flappy bird unblocked, skill game, hard game, one-button game, pixel game, classic game">
-    <link rel="canonical" href="https://onlyszgames.github.io/flappy-bird" />
+    <link rel="canonical" href="https://fafgamess.github.io/flappy-bird" />
     <meta name="robots" content="index, follow">
-    <meta name="author" content="Only Sz Games">
+    <meta name="author" content="FAF Games">
     <meta property="og:title" content="Flappy Bird Unblocked ~» The Infamous Flap-Fest" />
     <meta property="og:description" content="Flappy Bird Unblocked is the famously difficult one-button arcade game. Tap to flap your bird's wings and navigate through a series of green pipes. Do not crash!" />
-    <meta property="og:url" content="https://onlyszgames.github.io/flappy-bird" />
-    <meta property="og:image" content="https://onlyszgames.github.io/img/flappy-bird.png" />
+    <meta property="og:url" content="https://fafgamess.github.io/flappy-bird" />
+    <meta property="og:image" content="https://fafgamess.github.io/img/flappy-bird.png" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Only Sz Games" />
+    <meta property="og:site_name" content="FAF Games" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@SZGames">
     <meta name="twitter:title" content="Flappy Bird Unblocked ~» The Infamous Flap-Fest">
     <meta name="twitter:description" content="Flappy Bird Unblocked is the famously difficult one-button arcade game. Tap to flap your bird's wings and navigate through a series of green pipes. Do not crash!">
-    <meta name="twitter:image" content="https://onlyszgames.github.io/img/flappy-bird.png">
+    <meta name="twitter:image" content="https://fafgamess.github.io/img/flappy-bird.png">
     <link rel="icon" type="image/png" href="favicon.png">
     <script type="application/ld+json">
   {
         "@context": "https://schema.org",
         "@type": "Game",
         "name": "Flappy Bird",
-        "url": "https://onlyszgames.github.io/flappy-bird",
+        "url": "https://fafgamess.github.io/flappy-bird",
         "description": "Flappy Bird Unblocked is the famously difficult one-button arcade game. Tap to flap your bird's wings and navigate through a series of green pipes. Do not crash!",
         "genre": "Skill",
         "applicationCategory": "Game",
@@ -43,7 +43,7 @@
             "bestRating": "5",
             "worstRating": "1"
         },
-        "image": "https://onlyszgames.github.io/img/flappy-bird.png"
+        "image": "https://fafgamess.github.io/img/flappy-bird.png"
    }
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans&display=swap" rel="stylesheet">
@@ -393,7 +393,7 @@ justify-content: center;}
     <header>
        <div class="container header-content">
             <a href="/" class="logo">
-                Only Sz Games
+                FAF Games
             </a>
             <nav class="main-nav">
                 <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
@@ -434,8 +434,8 @@ justify-content: center;}
     <div class="container">
 
         <div class="game-header" style="background-color: #C0CA33;">
-            <h1>Flappy Bird</h1>
-            <p>The legend is back! Flappy Bird Unblocked is the simple, one-button game that took the world by storm. Tap to make your bird flap. Your goal is to guide it through the gaps in the green pipes. It is simple, it is difficult, and it is addictive.</p>
+            <h1>Flappy Bird Unblocked The Classic Tap-to-Fly Challenge on GitHub.io</h1>
+            <p>The legend returns! 🐦 Flappy Bird Unblocked is the ultimate one-button arcade game that took the world by storm. Simply tap to make your bird flap its wings and navigate through the narrow gaps between green pipes. It’s simple, frustratingly difficult, and completely addictive a perfect mix that keeps players coming back for “just one more try.” Whether you're at school, work, or home, you can now enjoy Flappy Bird Unblocked directly in your browser no downloads, no lag, just pure skill-based fun.</p>
         </div>
 
         <div class="star-rating-container" data-game-id="flappy-bird">
@@ -452,7 +452,7 @@ justify-content: center;}
 
         <div class="game-container">
             <div class="game-frame-container" id="gameFrameContainer">
-                <div class="game-image-bg" id="gameImageBg" style="background-image: url('https://onlyszgames.github.io/img/flappy-bird.png');"></div>
+                <div class="game-image-bg" id="gameImageBg" style="background-image: url('https://fafgamess.github.io/img/flappy-bird.png');"></div>
                 <div class="game-overlay" id="gameOverlay">
                   <button class="play-button" id="playButton">▶</button>
                     <div class="play-text">Play Flappy Bird</div>
@@ -465,9 +465,9 @@ justify-content: center;}
         </div>
 
         <div class="game-description">
-            <img src="https://onlyszgames.github.io/img/flappy-bird.png" alt="Flappy Bird
+            <img src="https://fafgamess.github.io/img/flappy-bird.png" alt="Flappy Bird
 Gameplay" class="game-description-image" title="Flappy Bird">
-            <h2>🐦 About Flappy Bird</h2><p>Flappy Bird is a minimalist, side-scrolling arcade game known for its extreme difficulty and viral popularity. You control a small, pixelated bird, and your only ability is to 'flap'. Each flap makes the bird jump up slightly. When you are not flapping, the bird falls due to gravity. The objective is to navigate the bird through a series of green pipes, each with a small gap. Flappy Bird Unblocked brings this infamously challenging and addictive experience to your browser. The goal is simple: get the highest score possible.</p><h2>✨ Game Features Flappy Bird</h2><p>The defining feature of Flappy Bird is its one-button simplicity. There is no story, no upgrades, and no complex mechanics. It is just you, the flap button, and the pipes. The game's brutal, "one-hit-you-die" difficulty is what makes it so compelling. Touching a pipe, or even the ground, results in an instant 'Game Over'. This creates an intense 'one-more-try' loop. Flappy Bird Unblocked is the ultimate test of timing, rhythm, and patience. Each pipe you pass adds one point to your score.</p><h3>How to Get a High Score</h3><ul><li>Find a Rhythm: The game is all about rhythm. Find a steady tap...tap...tap rhythm that keeps your bird at a stable height.</li><li>Stay Calm: Do not panic. Over-flapping is as dangerous as not flapping enough.</li><li>Aim for the Middle: Try to aim for the center of the gap every time.</li><li>Do Not Be Greedy: Focus on surviving the next pipe, not on a high score. The score will come naturally.</li></ul><h2>🕹️ How to Play Flappy Bird</h2><p>Playing Flappy Bird could not be simpler. Click your mouse, press the Spacebar, or tap the screen to make the bird flap its wings. Each flap gives you a small burst of upward momentum. If you do nothing, the bird will fall. You must flap with precise timing to keep the bird airborne and guide it through the openings in the pipes. The game starts, and you just flap to survive. Your score is the number of pipes you successfully pass through. Flappy Bird Unblocked is a pure test of your reaction time.</p>
+            <h2>🐦 About Flappy Bird</h2><p>Flappy Bird is a minimalist side-scrolling arcade game that became an internet sensation for its extreme difficulty and pixel-perfect gameplay. You control a tiny bird that flaps upward with every tap, while gravity constantly pulls it down. The goal is simple: fly through the gaps in the pipes without hitting anything. One mistake, and it’s game over. Flappy Bird Unblocked brings back this legendary challenge through GitHub.io, letting you relive the same addictive experience that millions loved. The aim? Beat your best score and test your patience like never before!</p><h2>Game Features of Flappy Bird Unblocked</h2><p>What makes Flappy Bird Unblocked so iconic is its simplicity. There’s no storyline, no upgrades, and no power-ups just pure skill and timing. Each tap controls your altitude, and every collision ends the game instantly. This unforgiving “one-hit-you-die” system creates a thrilling loop of frustration and satisfaction. Each pipe you successfully pass adds one point to your score, making every tap feel rewarding. The combination of simple controls, endless gameplay, and classic pixel visuals makes this game one of the most memorable unblocked games ever created.</p><h3>💡 Tips to Get a High Score in Flappy Bird</h3><ul><li>🕹️ Find Your Rhythm: Maintain a consistent tap…tap…tap rhythm to keep your bird steady.</li><li>😌 Stay Calm: Over-flapping is just as dangerous as under-flapping keep your cool.</li><li>🎯 Aim for the Middle: Always try to pass through the center of each gap for safety.</li><li>🚫 Don’t Be Greedy: Focus on surviving each pipe instead of chasing a high score the score will follow naturally.</li></ul><h2>🔥 How to Play Flappy Bird Unblocked</h2><p>Playing Flappy Bird Unblocked is as easy as it gets but mastering it is another story. Click your mouse, press the Spacebar, or tap your screen to make the bird flap its wings. Each flap propels you slightly upward; releasing lets you fall. Your goal is to pass through as many pipes as possible without crashing. Every successful pass adds one point to your score. Simple to play, hard to master this game is a true test of precision and reflexes. So, if you’re searching for Flappy Bird Unblocked, Unblocked Games, or GitHub.io versions, this is your chance to relive the legendary experience right in your browser fun, fast, and endlessly addictive!</p>
             <div class="game-features">
                 <h3>Categories</h3>
                 <div class="game-category-tags">
@@ -518,7 +518,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/snow-rider-3d" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/snow-rider-3d.png" alt="Snow Rider 3D A Fast-Paced Sledding Game">
+                                <img src="https://fafgamess.github.io/img/snow-rider-3d.png" alt="Snow Rider 3D A Fast-Paced Sledding Game">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Snow Rider 3D A Fast-Paced Sledding Game</h3>
@@ -529,7 +529,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/basketbros" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/basketbros.png" alt="BasketBros io Multiplayer Action">
+                                <img src="https://fafgamess.github.io/img/basketbros.png" alt="BasketBros io Multiplayer Action">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">BasketBros io Multiplayer Action</h3>
@@ -540,7 +540,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/vex-5" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/vex-5.png" alt="Vex 5 The Newest Challenge">
+                                <img src="https://fafgamess.github.io/img/vex-5.png" alt="Vex 5 The Newest Challenge">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Vex 5 The Newest Challenge</h3>
@@ -551,7 +551,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/daddy-long-legs" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/daddy-long-legs.png" alt="Daddy Long Legs Walking Sim">
+                                <img src="https://fafgamess.github.io/img/daddy-long-legs.png" alt="Daddy Long Legs Walking Sim">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Daddy Long Legs Walking Sim</h3>
@@ -562,7 +562,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/golfinity" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/golfinity.png" alt="Golfinity">
+                                <img src="https://fafgamess.github.io/img/golfinity.png" alt="Golfinity">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Golfinity</h3>
@@ -573,7 +573,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/touchdowners" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/touchdowners.png" alt="Touchdowners">
+                                <img src="https://fafgamess.github.io/img/touchdowners.png" alt="Touchdowners">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Touchdowners</h3>
@@ -584,7 +584,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/super-liquid-soccer" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/super-liquid-soccer.png" alt="Super Liquid Soccer">
+                                <img src="https://fafgamess.github.io/img/super-liquid-soccer.png" alt="Super Liquid Soccer">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Super Liquid Soccer</h3>
@@ -595,7 +595,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/dark-runner" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/dark-runner.png" alt="Dark Runner A Stylish Platformer">
+                                <img src="https://fafgamess.github.io/img/dark-runner.png" alt="Dark Runner A Stylish Platformer">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Dark Runner A Stylish Platformer</h3>
@@ -606,7 +606,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/soccer-random" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/soccer-random.png" alt="Soccer Random Physics Battles">
+                                <img src="https://fafgamess.github.io/img/soccer-random.png" alt="Soccer Random Physics Battles">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Soccer Random Physics Battles</h3>
@@ -617,7 +617,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/panda-bubble-shooter" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/panda-bubble-shooter.png" alt="Panda Bubble Shooter A Classic Puzzle Game">
+                                <img src="https://fafgamess.github.io/img/panda-bubble-shooter.png" alt="Panda Bubble Shooter A Classic Puzzle Game">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Panda Bubble Shooter A Classic Puzzle Game</h3>
@@ -628,7 +628,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/death-run-3d" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/death-run-3d.png" alt="Death Run 3D Extreme Reflexes">
+                                <img src="https://fafgamess.github.io/img/death-run-3d.png" alt="Death Run 3D Extreme Reflexes">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Death Run 3D Extreme Reflexes</h3>
@@ -639,7 +639,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/papas-sushiria" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/papas-sushiria.png" alt="Papas Sushiria To Go">
+                                <img src="https://fafgamess.github.io/img/papas-sushiria.png" alt="Papas Sushiria To Go">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Papas Sushiria To Go</h3>
@@ -696,8 +696,8 @@ class="category-tag-item" style="background-color: #FF3D00;">
         <div class="container">
    <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Only Sz Games</h3>
-                    <p>Looking for your favorite Only Sz Games? Play them all right here, completely unblocked, even at school or work. Just click and play instantly—no downloads required.</p>
+                    <h3>FAF Games</h3>
+                    <p>Looking for your favorite FAF Games? Play them all right here, completely unblocked, even at school or work. Just click and play instantly—no downloads required.</p>
                     <div class="social-icons">
           <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
@@ -709,7 +709,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
 
             <div class="footer-bottom">
                 <p>&copy;
-<span id="currentYear"></span> Only Sz Games. All rights reserved.</p>
+<span id="currentYear"></span> FAF Games. All rights reserved.</p>
                 <div class="footer-links">
                     <a href="/privacy-policy">Privacy Policy</a>
                     <a href="/contact">Contact Us</a>
@@ -1040,5 +1040,3 @@ scrollToTopBtn.addEventListener('click', function(e) {
 </script>
 </body>
 </html>
-
-
