--- a/retro-bowl/index.html
+++ b/retro-bowl/index.html
@@ -3,30 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Retro Bowl Unblocked | Manage Your Team</title>
+    <title>FAF Games | Play Unblocked Games</title>
     <meta name="description" content="Lead your team to glory in Retro Bowl Unblocked. This charming retro-style game puts you in charge as the coach and QB. Manage, draft, and win the Bowl!">
     <meta name="keywords" content="retro bowl, retro bowl unblocked, sports game, strategy game, simulation game, football game, free online game">
-    <link rel="canonical" href="https://onlyszgames.github.io/retro-bowl" />
+    <link rel="canonical" href="https://fafgamess.github.io/retro-bowl" />
     <meta name="robots" content="index, follow">
-    <meta name="author" content="Only Sz Games">
+    <meta name="author" content="FAF Games">
     <meta property="og:title" content="Retro Bowl Unblocked | Manage Your Team" />
     <meta property="og:description" content="Lead your team to glory in Retro Bowl Unblocked. This charming retro-style game puts you in charge as the coach and QB. Manage, draft, and win the Bowl!" />
-    <meta property="og:url" content="https://onlyszgames.github.io/retro-bowl" />
-    <meta property="og:image" content="https://onlyszgames.github.io/img/retro-bowl.png" />
+    <meta property="og:url" content="https://fafgamess.github.io/retro-bowl" />
+    <meta property="og:image" content="https://fafgamess.github.io/img/retro-bowl.png" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Only Sz Games" />
+    <meta property="og:site_name" content="FAF Games" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@SZGames">
     <meta name="twitter:title" content="Retro Bowl Unblocked | Manage Your Team">
     <meta name="twitter:description" content="Lead your team to glory in Retro Bowl Unblocked. This charming retro-style game puts you in charge as the coach and QB. Manage, draft, and win the Bowl!">
-    <meta name="twitter:image" content="https://onlyszgames.github.io/img/retro-bowl.png">
+    <meta name="twitter:image" content="https://fafgamess.github.io/img/retro-bowl.png">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <script type="application/ld+json">
   {
         "@context": "https://schema.org",
         "@type": "Game",
         "name": "Retro Bowl Classic Football Coach",
-        "url": "https://onlyszgames.github.io/retro-bowl",
+        "url": "https://fafgamess.github.io/retro-bowl",
         "description": "Lead your team to glory in Retro Bowl Unblocked. This charming retro-style game puts you in charge as the coach and QB. Manage, draft, and win the Bowl!",
         "genre": "Sports",
         "applicationCategory": "Game",
@@ -43,7 +43,7 @@
             "bestRating": "5",
             "worstRating": "1"
         },
-        "image": "https://onlyszgames.github.io/img/retro-bowl.png"
+        "image": "https://fafgamess.github.io/img/retro-bowl.png"
    }
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans&display=swap" rel="stylesheet">
@@ -392,7 +392,7 @@ justify-content: center;}
     <header>
        <div class="container header-content">
             <a href="/" class="logo">
-                Only Sz Games
+                FAF Games
             </a>
             <nav class="main-nav">
                 <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
@@ -435,8 +435,8 @@ justify-content: center;}
 
 
         <div class="game-header" style="background-color: #F4511E;">
-            <h1>Retro Bowl Classic Football Coach</h1>
-            <p>Experience the thrill of managing a football franchise in Retro Bowl Unblocked. This critically acclaimed game combines simple, on-field arcade action with deep team management. Draft players, manage your roster, deal with player morale, and upgrade your facilities. Then, take control as the quarterback on game day. It is the perfect simulation for any football fan.</p>
+            <h1>Retro Bowl Unblocked Classic Football Coach Game on GitHub.io</h1>
+            <p>🏈 Experience the ultimate football management and arcade action with Retro Bowl Unblocked! This game combines the thrill of being a head coach with the intensity of on-field gameplay. Manage your roster, draft new talent, handle team morale, and upgrade facilities then step onto the field as the quarterback to lead your team to victory. Whether you're at school, work, or home, Retro Bowl Unblocked delivers the perfect mix of strategy and skill directly in your browser.</p>
         </div>
 
         <div class="star-rating-container" data-game-id="retro-bowl">
@@ -453,7 +453,7 @@ justify-content: center;}
 
         <div class="game-container">
             <div class="game-frame-container" id="gameFrameContainer">
-                <div class="game-image-bg" id="gameImageBg" style="background-image: url('https://onlyszgames.github.io/img/retro-bowl.png');"></div>
+                <div class="game-image-bg" id="gameImageBg" style="background-image: url('https://fafgamess.github.io/img/retro-bowl.png');"></div>
                 <div class="game-overlay" id="gameOverlay">
                   <button class="play-button" id="playButton">▶</button>
                     <div class="play-text">Play Retro Bowl Classic Football Coach</div>
@@ -466,9 +466,9 @@ justify-content: center;}
         </div>
 
         <div class="game-description">
-            <img src="https://onlyszgames.github.io/img/retro-bowl.png" alt="Retro Bowl Classic Football Coach
+            <img src="https://fafgamess.github.io/img/retro-bowl.png" alt="Retro Bowl Classic Football Coach
 Gameplay" class="game-description-image" title="Retro Bowl Classic Football Coach">
-            <h2>About Retro Bowl 🏈</h2><p>Retro Bowl is a masterpiece of sports simulation, all wrapped in a charming pixel-art package. It perfectly captures the feel of classic 8-bit sports games while offering modern, engaging gameplay. You are the head coach and star quarterback. Between games, you make key decisions about your roster and club. During games, you control the offense, calling plays and making the crucial throws. This Retro Bowl Unblocked version is the full, addictive experience.</p><h2>Game Features Retro Bowl 🏆</h2><p>The game's genius is its blend of management and action. The management side is deep: you draft new players, sign free agents, trade unhappy stars, and manage your 'Front Office' to gain bonuses. The on-field gameplay in Retro Bowl Unblocked is simple but skillful. You aim your passes by pulling back and releasing, timing your throws to hit receivers in-stride. The game has a 'star player' system, morale, and even injuries, making every season feel unique and challenging.</p><h3>Championship Strategy</h3><ul><li>Invest in a good Quarterback and Wide Receiver early on.</li><li>Keep your players happy; their morale affects their performance.</li><li>Do not be afraid to trade a star player for a good draft pick.</li><li>On field, learn to 'lead' your receivers with your passes.</li></ul><h2>How to Play Retro Bowl 🎮</h2><p>In the management menus, you use your mouse to navigate, hire/fire, draft, and upgrade. On game day (when you are on offense), the game will suggest a play. To pass the ball, click and drag backward from your QB to aim. A guideline will appear. Release to throw. To run the ball, the AI will control the running back, but you can swipe (or use keys) to dodge. On defense, you watch the play unfold. Your goal is to win games, make the playoffs, and win the Retro Bowl!</p>
+            <h2>About Retro Bowl 🏈</h2><p>Retro Bowl is a pixel-perfect blend of old-school charm and modern gameplay. With its nostalgic 8-bit visuals and deep simulation mechanics, it’s the ideal football game for fans who love both coaching and playing. As the team’s head coach and star QB, you make strategic roster moves between games trading players, drafting rookies, and managing salaries. On game day, you control the offense, call plays, and make precision throws. The Retro Bowl Unblocked version gives you full access to the complete experience, no downloads required.</p><h2>🎮 Game Features of Retro Bowl Unblocked</h2><p>The magic of Retro Bowl Unblocked lies in its perfect mix of team management and action-packed gameplay. You take full control of your football franchise drafting talented players, signing free agents, and keeping your salary cap balanced. Every decision you make off the field affects your team’s success on it. The gameplay itself is skill-based and rewarding; you control each pass by dragging and releasing, where timing and precision are crucial to victory. Player morale also plays a major role keeping your athletes happy ensures better on-field performance. Beyond that, you can upgrade your front office, training, and rehab facilities to build a long-lasting powerhouse. With endless seasons, new challenges, and intense rivalries, Retro Bowl Unblocked offers an engaging football experience that keeps you coming back for more.</p><h3>💡 Championship Strategy Tips</h3><ul><li>🎯 Invest early in a strong Quarterback and Wide Receiver combo.</li><li>😃 Keep morale high unhappy players underperform.</li><li>🔁 Don’t hesitate to trade star players for valuable draft picks.</li><li>🏈 Perfect your passes aim slightly ahead to “lead” your receivers.</li></ul><h2>🕹️ How to Play Retro Bowl Unblocked</h2><p>Playing Retro Bowl Unblocked is simple to pick up but tough to master. In management mode, you’ll use your mouse or touch controls to draft rookies, sign or release players, and balance your team’s budget. When game day arrives, it’s time to take control of the offense click and drag from your quarterback to aim, then release to throw the perfect pass. When running the ball, use your keyboard keys or swipe gestures to dodge defenders and gain extra yards. Defense runs automatically, but your smart roster management and upgrades determine how strong your team performs. Your ultimate mission is to build a championship-worthy roster, dominate the playoffs, and lift the coveted Retro Bowl trophy. 🔥 Whether you search for retro bowl, retro bowl unblocked, retro bowl unblocked games, Unblocked Games, or GitHub.io, this nostalgic football classic delivers pure retro-style action straight from your browser.</p>
             <div class="game-features">
                 <h3>Categories</h3>
                 <div class="game-category-tags">
@@ -524,7 +524,7 @@ class="category-tag-item" style="background-color: #64DD17;">
                     <div class="game-card">
                         <a href="/clash-of-tanks" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/clash-of-tanks.png" alt="Clash of Tanks Tactical Warfare">
+                                <img src="https://fafgamess.github.io/img/clash-of-tanks.png" alt="Clash of Tanks Tactical Warfare">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Clash of Tanks Tactical Warfare</h3>
@@ -535,7 +535,7 @@ class="category-tag-item" style="background-color: #64DD17;">
                     <div class="game-card">
                         <a href="/murder" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/murder.png" alt="Murder The Royal Assassin Game">
+                                <img src="https://fafgamess.github.io/img/murder.png" alt="Murder The Royal Assassin Game">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Murder The Royal Assassin Game</h3>
@@ -546,7 +546,7 @@ class="category-tag-item" style="background-color: #64DD17;">
                     <div class="game-card">
                         <a href="/parking-fury" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/parking-fury.png" alt="Parking Fury 2D Top Down Puzzle">
+                                <img src="https://fafgamess.github.io/img/parking-fury.png" alt="Parking Fury 2D Top Down Puzzle">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Parking Fury 2D Top Down Puzzle</h3>
@@ -557,7 +557,7 @@ class="category-tag-item" style="background-color: #64DD17;">
                     <div class="game-card">
                         <a href="/2048-watermelon" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/2048-watermelon.png" alt="2048 Watermelon Fruit Puzzle">
+                                <img src="https://fafgamess.github.io/img/2048-watermelon.png" alt="2048 Watermelon Fruit Puzzle">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">2048 Watermelon Fruit Puzzle</h3>
@@ -568,7 +568,7 @@ class="category-tag-item" style="background-color: #64DD17;">
                     <div class="game-card">
                         <a href="/duck-life-battle" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/duck-life-battle.png" alt="Duck Life Battle (Demo)">
+                                <img src="https://fafgamess.github.io/img/duck-life-battle.png" alt="Duck Life Battle (Demo)">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Duck Life Battle (Demo)</h3>
@@ -579,7 +579,7 @@ class="category-tag-item" style="background-color: #64DD17;">
                     <div class="game-card">
                         <a href="/drift-hunters" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/drift-hunters.png" alt="Drift Hunters">
+                                <img src="https://fafgamess.github.io/img/drift-hunters.png" alt="Drift Hunters">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Drift Hunters</h3>
@@ -590,7 +590,7 @@ class="category-tag-item" style="background-color: #64DD17;">
                     <div class="game-card">
                         <a href="/craftomation-1" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/craftomation-1.png" alt="Craftomation 1 Puzzles Your Ultimate Factory Challenge">
+                                <img src="https://fafgamess.github.io/img/craftomation-1.png" alt="Craftomation 1 Puzzles Your Ultimate Factory Challenge">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Craftomation 1 Puzzles Your Ultimate Factory Challenge</h3>
@@ -601,7 +601,7 @@ class="category-tag-item" style="background-color: #64DD17;">
                     <div class="game-card">
                         <a href="/horse-simulator-3d" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/horse-simulator-3d.png" alt="Horse Simulator 3D Your Wild Adventure">
+                                <img src="https://fafgamess.github.io/img/horse-simulator-3d.png" alt="Horse Simulator 3D Your Wild Adventure">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Horse Simulator 3D Your Wild Adventure</h3>
@@ -612,7 +612,7 @@ class="category-tag-item" style="background-color: #64DD17;">
                     <div class="game-card">
                         <a href="/tetris-99" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/tetris-99.png" alt="Tetris 99 The Ultimate Block Battle Royale">
+                                <img src="https://fafgamess.github.io/img/tetris-99.png" alt="Tetris 99 The Ultimate Block Battle Royale">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Tetris 99 The Ultimate Block Battle Royale</h3>
@@ -623,7 +623,7 @@ class="category-tag-item" style="background-color: #64DD17;">
                     <div class="game-card">
                         <a href="/super-liquid-soccer" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/super-liquid-soccer.png" alt="Super Liquid Soccer">
+                                <img src="https://fafgamess.github.io/img/super-liquid-soccer.png" alt="Super Liquid Soccer">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Super Liquid Soccer</h3>
@@ -634,7 +634,7 @@ class="category-tag-item" style="background-color: #64DD17;">
                     <div class="game-card">
                         <a href="/tricks" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/tricks.png" alt="Tricks">
+                                <img src="https://fafgamess.github.io/img/tricks.png" alt="Tricks">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Tricks</h3>
@@ -645,7 +645,7 @@ class="category-tag-item" style="background-color: #64DD17;">
                     <div class="game-card">
                         <a href="/happy-room" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/happy-room.png" alt="Happy Room The Ultimate Sandbox Of Destruction">
+                                <img src="https://fafgamess.github.io/img/happy-room.png" alt="Happy Room The Ultimate Sandbox Of Destruction">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Happy Room The Ultimate Sandbox Of Destruction</h3>
@@ -702,8 +702,8 @@ class="category-tag-item" style="background-color: #64DD17;">
         <div class="container">
    <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Only Sz Games</h3>
-                    <p>Looking for your favorite Only Sz Games? Play them all right here, completely unblocked, even at school or work. Just click and play instantly—no downloads required.</p>
+                    <h3>FAF Games</h3>
+                    <p>Looking for your favorite FAF Games? Enjoy them all right here completely unblocked and ready to play anytime, even at school or work! 🎮 Just click, start instantly, and dive into nonstop fun no downloads, no limits, just pure gaming excitement. 🚀</p>
                     <div class="social-icons">
           <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
